--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -15,10 +15,7 @@ import LinkCard from "../components/page/LinkCard.astro";
     <div class="flex">
       <div class="p-6">
           # Hi there! 👋
-
-          This is the Frosti theme
-
-          A clean, elegant, and fast static blog template
+          欢迎来到我的个人网站!
       </div>
     </div>
 
