--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -15,69 +15,64 @@ import LinkCard from "../components/page/LinkCard.astro";
     <div class="flex">
       <div class="p-6">
           # Hi there! 👋
-          欢迎来到我的个人网站!
+          我是 FeltSquiirel727  
+          欢迎来到我的个人网站!  
       </div>
     </div>
 
   </BaseCard>
 
   <BaseCard title="Home" image="/index.webp">
-# Frosti Introduction
+# 主页
 
 ---
 
-## Welcome to Frosti Blog Template
+欢迎来到我的小天地，我是一名热爱生活、热爱编程的初三学生，就读于[科大实验](http://www.dzkdsyzx.com/)。  
+在这个快节奏的世界里，我偏爱寻找那一份宁静，享受美食、畅饮、游戏和娱乐带来的简单快乐。  
+当然，编程是我生活中不可或缺的一部分，它让我能够将创意转化为现实，用代码编织梦想。  
+~~（尽管我只精通图形化编程）~~  
 
-### 🧊 Frosti
+在这个博客中，我会分享我的编程旅程、技术探索和生活中的点滴趣事。  
+如果你对技术充满好奇，或者只是想要寻找一些轻松愉快的阅读材料，那么请随意浏览，希望我的分享能给你带来启发和乐趣。  
 
-**A clean, elegant, and fast static blog template! 🚀 Developed with [Astro](https://astro.build/)!**
+别忘了，生活不只有代码，还有诗和远方。  
+让我们一起享受这段旅程吧！ 
 
-[**🖥️ Frosti Demo**](https://frosti.saroprock.com)&nbsp;&nbsp;&nbsp;/&nbsp;&nbsp;&nbsp;[**🌏 Chinese README**](https://github.com/EveSunMaple/Frosti/blob/main/README.zh-CN.md)&nbsp;&nbsp;&nbsp;/&nbsp;&nbsp;&nbsp;[**❤️ My Blog**](https://www.saroprock.com)
+> 你的存在，则是我胸前心跳里五色的绚彩  
+> Your presence is in the heartbeat of my chest. The colorful splendor of five colors.  
 
-### Why Choose Frosti?
+## 导航
 
-- **Lightning-fast Access Speed and Excellent SEO**: Your blog content spreads quickly and efficiently.
-- **View Transition Animations**: Smooth visual experience with Swup.
-- **Integrated Sidebar**: Includes social info cards, theme switch, back-to-top button, and persistent article directory.
-- **Powerful Search Functionality**: Easily search articles using pagefind.
-- **Day/Night Mode**: Adapt to different reading environments.
-- **Rich Components**: Collapsible pages, link cards, timeline components, various alerts, code block copy button, image comparison, and end-of-article copyright information.
-- **Comment System**: Built with [Waline](https://waline.js.org/) for interactive discussions.
-- **Responsive Design**: Crafted with [Tailwind CSS](https://tailwindcss.com/) and [daisyUI](https://daisyui.com/) to fit different devices.
+<LinkCard
+  title="博客"
+  desc="想到的与看到的"
+  url="/blog"
+/>
 
-### Feature Highlights
+<LinkCard
+  title="项目"
+  desc="想法的实现"
+  url="/project"
+/>
 
-- **Easy Installation and Use**: Install with just one command, customize everything in `consts.ts`.
-- **Variety of Article Components**: Enhance the presentation of your blog content.
+<LinkCard
+  title="关于"
+  desc="“我”与博客"
+  url="/about"
+/>
 
-### How to Get Started?
+<LinkCard
+  title="友链"
+  desc="有趣的灵魂"
+  url="/friend"
+/>
 
-1. **Install Frosti**
+## 和我玩？  
 
-   Simply run the following command in your terminal:
+Hey，朋友，来看看我开设的MC服务器吗？  
+网站链接：[https://play.mcmod.cn/sv20188110.html](https://play.mcmod.cn/sv20188110.html)  
 
-   ```sh
-   npm create astro@latest -- --template EveSunMaple/Frosti
-   ```
-
-2. **Configure the Comment System**
-
-   Set up [Waline](https://waline.js.org/) to enable comments. Check `src\components\Comment.astro` for details.
-
-### Future Plans
-
-- **Integrate Headless CMS**.
-- **Fix Known Style Bugs**.
-- **More Features Coming Soon...**
-
-### Special Thanks
-
-A big thanks to @[Saicaca](https://github.com/saicaca) and @[WRXinYue](https://github.com/WRXinYue) for their inspiration and help with Frosti.
-
-### Star History
-
-![Star History Chart](https://api.star-history.com/svg?repos=EveSunMaple/Frosti&type=Date)
-
+我的Steam好友代码：1263204075  
 
   </BaseCard>
 </BaseLayout>
