基本信息修改

--- a/src/pages/about.mdx
+++ b/src/pages/about.mdx
@@ -12,47 +12,38 @@ import LinkCard from "../components/page/LinkCard.astro";
 
 <BaseLayout title="About">
   <BaseCard title="About">
-# About Frosti
+# 关于
 
 ---
 
-## Brief introduction
+## 简介
 
-Frosti is a static blog template created by EveSunMaple using Astro, designed to replace bloated Hexo. The author is only a high school student, and there are many imperfections in this template that need to be modified. If you are interested, please visit the Github repository.
+我是来自[科大实验](http://www.dzkdsyzx.com/)的初三学生。  
+在这个快节奏的世界里，我偏爱寻找那一份宁静，享受美食、畅饮、游戏和娱乐带来的简单快乐。  
+当然，编程是我生活中不可或缺的一部分，它让我能够将创意转化为现实，用代码编织梦想。  
 
-## TimeLine
+在这个充满竞争的环境中，我找到了自己的小角落，可以躺平享受生活。  
+我的爱好广泛，从乒乓球、歌唱、魔方到下棋，虽然随着初中生活的忙碌，许多爱好已经渐渐淡出我的生活，但乒乓球和编程始终是我不变的热爱。
 
-    <TimeLine
+在学校，我享受着与同学们的相处时光，虽然成绩并不是最顶尖的，但我依然能够稳定在班级~~前五~~中下水平，我希望能够继续努力，更上一层楼。  
+学习对我来说，本就是一件充满乐趣的事情。~~真的吗？~~  
 
-items={[
-{ year: "2024-5-29", event: "Fixed accessibility issues, improved speed" },
-{ year: "2024-5-30", event: "Improved content, updated README, score 395" },
-{ year: "2024-6-2", event: "Added ProjectCard, refined Project page, removed lazy loading" },
-{ year: "2024-6-2", event: "Optimized link styles, pagespeed score 400" },
-{ year: "2024-6-12", event: "Added busuanzi counter" },
-{ year: "2024-6-16", event: "Converted CSS to SCSS, customized waline, improved Footnotes" },
-{ year: "2024-6-28", event: "Revamped SCSS to Tailwind, updated footer" },
-{ year: "2024-7-8", event: "Lighthouse score 400, enabled text compression, reverted footer" },
-{ year: "2024-7-9", event: "Added search functionality, refined footer and navbar" },
-{ year: "2024-7-9", event: "Fixed navigation issue" },
-{ year: "2024-7-10", event: "Added twikoo comments, improved search night mode" },
-{ year: "2024-7-13", event: "Added TOC, new guide article, new components" },
-{ year: "2024-7-18", event: "Added line numbers to code blocks, tutorial for code block themes" },
-{ year: "2024-7-19", event: "Fixed astro.config.mjs issues, improved day mode code block styles" },
-{ year: "2024-7-21", event: "Restructured main element, rewrote social links, menus, navbar, comments" },
-{ year: "2024-7-22", event: "Added back-to-top button, tablet styles, new article and repo card styles" },
-{ year: "2024-7-22", event: "Cleaned global.scss, added uncategorized tag for articles without tags" },
-{ year: "2024-7-23", event: "Fixed navbar disappearance on mobile" },
-{ year: "2024-7-24", event: "Fixed project card information issues, TOC navigation on blog and project pages" },
-{ year: "2024-7-26", event: "Fixed project card style issues, type issues checked" },
-{ year: "2024-7-29", event: "Separated line numbers and top bar from code, added code language display" },
-{ year: "2024-7-29", event: "Adjusted code block top bar, padding on mobile" },
-{ year: "2024-7-30", event: "Added tab page configuration to consts.ts, updated BaseLayout.astro" },
-{ year: "2024-8-1", event: "Added pagination buttons, integrated with sidebar" },
-{ year: "2024-8-2", event: "Added category feature, pagination for category and tag lists" },
-{ year: "2024-8-4", event: "Updated README, added Vercel Web Analytics" },
-]}
-/>
+编程是我探索世界的窗口。  
+最初接触Python时，我被它简洁优雅的语法所吸引，而Kitten作为我的图形化编程语言，让我在编程的世界里更加得心应手。  
+我精通~~这两种语言~~Kitten，它们让我在解决问题和创造新事物时更加高效和有趣。  
+我通过研究和实践，不断深化我的编程技能，并在编程猫社区上分享我写的小游戏和项目。  
+
+尽管因为学业压力，我曾暂时放下编程，但进入初中后，我又重新投入到编程的世界中。  
+由于找不到灵感，我会尝试复刻现成的游戏。  
+比如我复刻过 Among Us ，但是因为图形化编程难以实现其前后端逻辑，于是放弃了。  
+我还复刻过覆盖之爱，正在尝试，预发布：[https://shequ.codemao.cn/work/236297062](https://shequ.codemao.cn/work/236297062)。  
+
+这个博客是我分享编程旅程、技术探索和生活趣事的地方。  
+如果你对技术充满好奇，或者只是想要寻找一些轻松愉快的阅读材料，那么请随意浏览，希望我的分享能给你带来启发和乐趣。
+
+生活不只有代码，还有诗和远方。让我们在这个多彩的世界里，一起享受这段旅程。  
+
+> 你的存在，是我胸前心跳里五色的绚彩。  
 
   </BaseCard>
 </BaseLayout>
