--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -27,10 +27,11 @@ import LinkCard from "../components/page/LinkCard.astro";
 
 ---
 
-欢迎来到我的小天地，我是一名热爱生活、热爱编程的初三学生，就读于[科大实验](http://www.dzkdsyzx.com/)。  
+欢迎来到我的小天地。
+我是一名热爱生活、热爱编程的初三学生，就读于[科大实验](http://www.dzkdsyzx.com/)。  
 在这个快节奏的世界里，我偏爱寻找那一份宁静，享受美食、畅饮、游戏和娱乐带来的简单快乐。  
 当然，编程是我生活中不可或缺的一部分，它让我能够将创意转化为现实，用代码编织梦想。  
-~~（尽管我只精通图形化编程）~~  
+~~尽管我只精通图形化编程~~  
 
 在这个博客中，我会分享我的编程旅程、技术探索和生活中的点滴趣事。  
 如果你对技术充满好奇，或者只是想要寻找一些轻松愉快的阅读材料，那么请随意浏览，希望我的分享能给你带来启发和乐趣。  
