--- a/src/pages/project.mdx
+++ b/src/pages/project.mdx
@@ -19,35 +19,19 @@ import ProjectCard from "../components/ProjectCard.astro";
 
   </BaseCard>
   <ProjectCard
-    title="Frosti"
-    image="https://frosti.saroprock.com/view.png"
-    desc="一个干净、优美、快速的博客模板！"
-    url="https://github.com/EveSunMaple/Frosti"
-    badge="Astro"
+    title="2016.01分班快闪"
+    image="https://creation.bcmcdn.com/120/kitten/d2ViXzIwMDFfNDg4MzQyOF8xMTY4NDc5ODJfMTczNTM1ODA3NTMwMV8zMjA3NTRiMg=="
+    desc="纪念我们的青春！"
+    url="https://shequ.codemao.cn/work/116847982"
+    badge="Kitten"
     target="_self"
   />
   <ProjectCard
     title="Word-testing-application"
-    image="https://raw.githubusercontent.com/EveSunMaple/Word-testing-application/master/view.png"
-    desc="一个用Python和Tkinter制作的单词测试应用"
-    url="https://github.com/EveSunMaple/Word-testing-application"
-    badge="Python"
-    target="_self"
-  />
-  <ProjectCard
-    title="InfinitySky"
-    image="https://raw.githubusercontent.com/EveSunMaple/InfinitySky/master/view.png"
-    desc="一个ExtraEasy2D的示例项目"
-    url="https://github.com/EveSunMaple/InfinitySky"
-    badge="C++"
-    target="_self"
-  />
-  <ProjectCard
-    title="code-judge"
-    image="https://raw.githubusercontent.com/EveSunMaple/code-judge/master/index.png"
-    desc="An elegant yet uncomplicated CPP judging system for informatics competitions."
-    url="https://github.com/EveSunMaple/code-judge"
-    badge="C++"
+    image="https://creation.bcmcdn.com/445/kitten/d2ViXzIwMDFfNDg4MzQyOF8yMzYyOTcwNjJfMTczNTM1ODU0NTAxM19kMWIxNjY2NQ==.png"
+    desc="一个用Kitten复刻的游戏"
+    url="https://shequ.codemao.cn/work/236297062"
+    badge="Kitten"
     target="_self"
   />
 </BaseLayout>
