--- a/src/pages/project.mdx
+++ b/src/pages/project.mdx
@@ -13,7 +13,7 @@ import ProjectCard from "../components/ProjectCard.astro";
 
 <BaseLayout title="Project">
   <BaseCard title="Project">
-# Project
+# 项目
 
 ---
 
@@ -27,7 +27,7 @@ import ProjectCard from "../components/ProjectCard.astro";
     target="_self"
   />
   <ProjectCard
-    title="Word-testing-application"
+    title="覆盖之爱"
     image="https://creation.bcmcdn.com/445/kitten/d2ViXzIwMDFfNDg4MzQyOF8yMzYyOTcwNjJfMTczNTM1ODU0NTAxM19kMWIxNjY2NQ==.png"
     desc="一个用Kitten复刻的游戏"
     url="https://shequ.codemao.cn/work/236297062"
