--- a/src/pages/project.mdx
+++ b/src/pages/project.mdx
@@ -24,7 +24,7 @@ import ProjectCard from "../components/ProjectCard.astro";
     desc="纪念我们的青春！"
     url="https://shequ.codemao.cn/work/116847982"
     badge="Kitten"
-    target="_self"
+    target="_blank"
   />
   <ProjectCard
     title="覆盖之爱"
@@ -32,6 +32,6 @@ import ProjectCard from "../components/ProjectCard.astro";
     desc="一个用Kitten复刻的游戏"
     url="https://shequ.codemao.cn/work/236297062"
     badge="Kitten"
-    target="_self"
+    target="_blank"
   />
 </BaseLayout>
