--- a/src/pages/project.mdx
+++ b/src/pages/project.mdx
@@ -20,7 +20,7 @@ import ProjectCard from "../components/ProjectCard.astro";
   </BaseCard>
   <ProjectCard
     title="2016.01分班快闪"
-    image="https://creation.bcmcdn.com/120/kitten/d2ViXzIwMDFfNDg4MzQyOF8xMTY4NDc5ODJfMTczNTM1ODA3NTMwMV8zMjA3NTRiMg=="
+    image="https://creation.bcmcdn.com/445/kitten/d2ViXzIwMDFfNDg4MzQyOF8yNTA5MDczNjZfMTczNTM1OTg0ODg5M19jMTkyZTgxMA==.png"
     desc="纪念我们的青春！"
     url="https://shequ.codemao.cn/work/116847982"
     badge="Kitten"
