--- a/src/pages/friend.mdx
+++ b/src/pages/friend.mdx
@@ -22,6 +22,7 @@ import LinkCard from "../components/page/LinkCard.astro";
         desc="一位普通的高中学生"
         url="https://www.saroprock.com"
         img="https://www.saroprock.com/profile.webp"
+        target="_blank"
       />
     </div>
 
