--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -44,6 +44,7 @@ import LinkCard from "../components/page/LinkCard.astro";
 
 ## 导航
 
+<div class="grid grid-cols-2 gap-4">
 <LinkCard
   title="博客"
   desc="想到的与看到的"
@@ -67,6 +68,7 @@ import LinkCard from "../components/page/LinkCard.astro";
   desc="有趣的灵魂"
   url="/friend"
 />
+</div>
 
 ## 和我玩？  
 
