--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -49,24 +49,28 @@ import LinkCard from "../components/page/LinkCard.astro";
   title="博客"
   desc="想到的与看到的"
   url="/blog"
+  target="_self"
 />
 
 <LinkCard
   title="项目"
   desc="想法的实现"
   url="/project"
+  target="_self"
 />
 
 <LinkCard
   title="关于"
   desc="“我”与博客"
   url="/about"
+  target="_self"
 />
 
 <LinkCard
   title="友链"
   desc="有趣的灵魂"
   url="/friend"
+  target="_self"
 />
 </div>
 
