--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -28,7 +28,7 @@ import LinkCard from "../components/page/LinkCard.astro";
 ---
 
 欢迎来到我的小天地。
-我是一名热爱生活、热爱编程的初三学生，就读于[科大实验](http://www.dzkdsyzx.com/)。  
+我是一名热爱生活、热爱编程的初三学生，就读于[科大实验](http://www.dzkdsyzx.com/){target="_blank"}。  
 在这个快节奏的世界里，我偏爱寻找那一份宁静，享受美食、畅饮、游戏和娱乐带来的简单快乐。  
 当然，编程是我生活中不可或缺的一部分，它让我能够将创意转化为现实，用代码编织梦想。  
 ~~尽管我只精通图形化编程~~  
@@ -77,7 +77,7 @@ import LinkCard from "../components/page/LinkCard.astro";
 ## 和我玩？  
 
 Hey，朋友，来看看我开设的MC服务器吗？  
-网站链接：[https://play.mcmod.cn/sv20188110.html](https://play.mcmod.cn/sv20188110.html)  
+网站链接：[https://play.mcmod.cn/sv20188110.html](https://play.mcmod.cn/sv20188110.html){target="_blank"}  
 
 我的Steam好友代码：1263204075  
 
