--- a/src/pages/about.mdx
+++ b/src/pages/about.mdx
@@ -18,7 +18,7 @@ import LinkCard from "../components/page/LinkCard.astro";
 
 ## 简介
 
-我是来自[科大实验](http://www.dzkdsyzx.com/){target="_blank"}的初三学生。  
+我是来自[科大实验](http://www.dzkdsyzx.com/)的初三学生。  
 在这个快节奏的世界里，我偏爱寻找那一份宁静，享受美食、畅饮、游戏和娱乐带来的简单快乐。  
 当然，编程是我生活中不可或缺的一部分，它让我能够将创意转化为现实，用代码编织梦想。  
 
@@ -36,7 +36,7 @@ import LinkCard from "../components/page/LinkCard.astro";
 尽管因为学业压力，我曾暂时放下编程，但进入初中后，我又重新投入到编程的世界中。  
 由于找不到灵感，我会尝试复刻现成的游戏。  
 比如我复刻过 Among Us ，但是因为图形化编程难以实现其前后端逻辑，于是放弃了。  
-我还复刻过覆盖之爱，正在尝试，预发布：[https://shequ.codemao.cn/work/236297062](https://shequ.codemao.cn/work/236297062){target="_blank"}。  
+我还复刻过覆盖之爱，正在尝试，预发布：[https://shequ.codemao.cn/work/236297062](https://shequ.codemao.cn/work/236297062)。  
 
 这个博客是我分享编程旅程、技术探索和生活趣事的地方。  
 如果你对技术充满好奇，或者只是想要寻找一些轻松愉快的阅读材料，那么请随意浏览，希望我的分享能给你带来启发和乐趣。
