更新了一大堆东西
3篇文章、title汉化和其他

--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -10,8 +10,8 @@ import Warning from "../components/blog/warning.astro";
 import TimeLine from "../components/page/TimeLine.astro";
 import LinkCard from "../components/page/LinkCard.astro";
 
-<BaseLayout title="Home">
-  <BaseCard title="Home">
+<BaseLayout title="主页">
+  <BaseCard title="主页">
     <div class="flex">
       <div class="p-6">
           # Hi there! 👋
@@ -22,7 +22,7 @@ import LinkCard from "../components/page/LinkCard.astro";
 
   </BaseCard>
 
-  <BaseCard title="Home" image="/index.webp">
+  <BaseCard title="主页" image="/index.webp">
 # 主页
 
 ---
