--- a/src/pages/project.mdx
+++ b/src/pages/project.mdx
@@ -11,8 +11,8 @@ import TimeLine from "../components/page/TimeLine.astro";
 import LinkCard from "../components/page/LinkCard.astro";
 import ProjectCard from "../components/ProjectCard.astro";
 
-<BaseLayout title="Project">
-  <BaseCard title="Project">
+<BaseLayout title="项目">
+  <BaseCard title="项目">
 # 项目
 
 ---
