--- a/src/pages/friend.mdx
+++ b/src/pages/friend.mdx
@@ -10,8 +10,8 @@ import Warning from "../components/blog/warning.astro";
 import TimeLine from "../components/page/TimeLine.astro";
 import LinkCard from "../components/page/LinkCard.astro";
 
-<BaseLayout title="Friend">
-  <BaseCard title="Friend">
+<BaseLayout title="友链">
+  <BaseCard title="友链">
 # 友链
 
 ---
@@ -19,7 +19,7 @@ import LinkCard from "../components/page/LinkCard.astro";
     <div class="grid grid-cols-2 gap-4">
       <LinkCard
         title="EveSunMaple"
-        desc="一位普通的高中学生"
+        desc="这个主题的作者"
         url="https://www.saroprock.com"
         img="https://www.saroprock.com/profile.webp"
         target="_blank"
