添加1条友链，修改项目卡片GithubInfo逻辑

--- a/src/pages/friend.mdx
+++ b/src/pages/friend.mdx
@@ -24,6 +24,13 @@ import LinkCard from "../components/page/LinkCard.astro";
         img="https://www.saroprock.com/profile.webp"
         target="_blank"
       />
+      <LinkCard
+        title="BySide 相伴同行"
+        desc="一个我的世界服务器"
+        url="https://www.byside.top/"
+        img="https://www.byside.top/images/logo.png"
+        target="_blank"
+      />
     </div>
 
   </BaseCard>
