--- a/src/pages/project.mdx
+++ b/src/pages/project.mdx
@@ -23,6 +23,7 @@ import ProjectCard from "../components/ProjectCard.astro";
     image="https://creation.bcmcdn.com/445/kitten/d2ViXzIwMDFfNDg4MzQyOF8yNTA5MDczNjZfMTczNTM1OTg0ODg5M19jMTkyZTgxMA==.png"
     desc="纪念我们的青春！"
     url="https://shequ.codemao.cn/work/116847982"
+    github = "0"
     badge="Kitten"
     target="_blank"
   />
@@ -31,6 +32,7 @@ import ProjectCard from "../components/ProjectCard.astro";
     image="https://creation.bcmcdn.com/445/kitten/d2ViXzIwMDFfNDg4MzQyOF8yMzYyOTcwNjJfMTczNTM1ODU0NTAxM19kMWIxNjY2NQ==.png"
     desc="一个用Kitten复刻的游戏"
     url="https://shequ.codemao.cn/work/236297062"
+    github = "0"
     badge="Kitten"
     target="_blank"
   />
