--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -15,7 +15,7 @@ import LinkCard from "../components/page/LinkCard.astro";
     <div class="flex">
       <div class="p-6">
           # Hi there! 👋
-          我是 FeltSquiirel727  
+          我是 FeltSquirrel727  
           欢迎来到我的个人网站!  
       </div>
     </div>
