更新了一篇文章

--- a/src/content/blog/2024122802.mdx
+++ b/src/content/blog/2024122802.mdx
@@ -1,6 +1,6 @@
 ---
 title: "从这里走出去"
-description: "这是一篇我在一场考试中临场发挥的一篇作文"
+description: "一篇我在一场考试中临场发挥的一篇作文"
 pubDate: "2024 12 28"
 image: /image/image1.jpg
 categories:
