--- a/src/content/blog/2024122803.mdx
+++ b/src/content/blog/2024122803.mdx
@@ -1,6 +1,6 @@
 ---
 title: "月城西昌"
-description: "这是一篇语文老师传授给我的一篇作文"
+description: "一篇语文老师传授给我的一篇作文"
 pubDate: "2024 12 28"
 image: /image/image1.jpg
 categories:
