--- a/src/pages/about.mdx
+++ b/src/pages/about.mdx
@@ -25,6 +25,8 @@ import LinkCard from "../components/page/LinkCard.astro";
 在这个充满竞争的环境中，我找到了自己的小角落，可以躺平享受生活。  
 我的爱好广泛，从乒乓球、歌唱、魔方到下棋，虽然随着初中生活的忙碌，许多爱好已经渐渐淡出我的生活，但乒乓球和编程始终是我不变的热爱。
 
+## 我和学校
+
 在学校，我享受着与同学们的相处时光，虽然成绩并不是最顶尖的，但我依然能够稳定在班级~~前五~~中下水平，我希望能够继续努力，更上一层楼。  
 学习对我来说，本就是一件充满乐趣的事情。~~真的吗？~~  
 
@@ -32,6 +34,8 @@ import LinkCard from "../components/page/LinkCard.astro";
 最初接触Python时，我被它简洁优雅的语法所吸引，而Kitten作为我的图形化编程语言，让我在编程的世界里更加得心应手。  
 我精通~~这两种语言~~Kitten，它们让我在解决问题和创造新事物时更加高效和有趣。  
 我通过研究和实践，不断深化我的编程技能，并在编程猫社区上分享我写的小游戏和项目。  
+
+## 我和编程
 
 尽管因为学业压力，我曾暂时放下编程，但进入初中后，我又重新投入到编程的世界中。  
 由于找不到灵感，我会尝试复刻现成的游戏。  
