更新了一篇文章

--- a/src/content/blog/2024122801.mdx
+++ b/src/content/blog/2024122801.mdx
@@ -2,7 +2,7 @@
 title: "12月月评价"
 description: "12月月评价的感受与结果"
 pubDate: "2024 12 28"
-image: /image/image4.jpg
+image: https://www.helloimg.com/i/2025/01/10/6781340264f36.jpg
 categories:
   - 学习
 tags:
