--- a/src/content/blog/2024123101.mdx
+++ b/src/content/blog/2024123101.mdx
@@ -1,6 +1,6 @@
 ---
 title: "【我的世界】从零开始搭建自己的MC服务器"
-description: "【我的世界】从零开始搭建自己的Java版MC服务器，和好伙伴一起玩"
+description: "从零开始搭建自己的Java版MC服务器，并和好伙伴一起玩"
 pubDate: "2024 12 31"
 image: https://image.api.playstation.com/vulcan/img/cfn/11307uYG0CXzRuA9aryByTHYrQLFz-HVQ3VVl7aAysxK15HMpqjkAIcC_R5vdfZt52hAXQNHoYhSuoSq_46_MT_tDBcLu49I.png
 categories:
@@ -93,9 +93,9 @@ java的安装请参考：[https://zh.minecraft.wiki/w/Tutorial:%E6%9E%B6%E8%AE%B
 
 如果在家搭建服务器，你需要有公网。检查方法如下。  
 1.打开[https://ipw.cn](https://ipw.cn)，查看IPv4地址  
-![屏幕截图.jpeg](https://www.helloimg.com/i/2025/01/01/6774a0e462b35.jpeg)  
+![屏幕截图](https://www.helloimg.com/i/2025/01/01/6774a0e462b35.jpeg)  
 2.打开路由器后台，查看WAN口IPv4地址  
-![屏幕截图.png](https://www.helloimg.com/i/2025/01/01/6774a293c92c0.png)  
+![屏幕截图](https://www.helloimg.com/i/2025/01/01/6774a293c92c0.png)  
 如果看到的两个IPv4地址相同，那么你就有公网。如果没有也没有关系，可以用FRP连接（延迟普遍会更高）  
 
 ## 服务端  
