--- a/src/content/blog/2024122802.mdx
+++ b/src/content/blog/2024122802.mdx
@@ -2,7 +2,7 @@
 title: "从这里走出去"
 description: "一篇我在一场考试中临场发挥的一篇作文"
 pubDate: "2024 12 28"
-image: /image/image1.jpg
+image: https://www.helloimg.com/i/2025/01/10/6781335fe8a9b.jpg
 categories:
   - 学习
   - 生活
