--- a/src/content/blog/2024122803.mdx
+++ b/src/content/blog/2024122803.mdx
@@ -2,7 +2,7 @@
 title: "月城西昌"
 description: "一篇语文老师传授给我的一篇作文"
 pubDate: "2024 12 28"
-image: /image/image1.jpg
+image: https://www.helloimg.com/i/2025/01/10/6781335f8ab4c.jpg
 categories:
   - 学习
   - 生活
